# policyd-rate-limit

./: .justfile  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  rate-limit.sql  test.sh
.github/workflows/: deploy.yml  test.yml
contrib/debian/: postinst  postrm  prerm
contrib/systemd/: policyd-rate-limit.env  policyd-rate-limit.service
sql/: rate-limit.mysql  rate-limit.pgsql
src/: lib.rs  main.rs  queries.rs
src/cli/: mod.rs  start.rs  telemetry.rs
src/cli/actions/: mod.rs  run.rs
src/cli/commands/: mod.rs
src/cli/dispatch/: mod.rs
tests/: db_integration.rs  socket_integration.rs
