[package]
name = "policyd-rate-limit"
version = "0.0.1"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Postfix rate limiter SMTP policy daemon"
documentation = "https://github.com/nbari/policyd-rate-limit"
homepage = "https://github.com/nbari/policyd-rate-limit"
repository = "https://github.com/nbari/policyd-rate-limit"
readme = "README.md"
keywords = ["smtp", "daemon", "quota", "limit", "postfix"]
categories = ["email"]
license = "BSD-3-Clause"
edition = "2018"

[badges]
travis-ci = { repository = "nbari/policyd-rate-limit", branch = "master" }

[dependencies]
clap = "2.33"
dsn = "0.4"
mysql = "17.0.0"
