[package]
name = "policyd-rate-limit"
version = "0.2.0"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Postfix rate limiter SMTP policy daemon"
documentation = "https://github.com/nbari/policyd-rate-limit"
homepage = "https://github.com/nbari/policyd-rate-limit"
repository = "https://github.com/nbari/policyd-rate-limit"
readme = "README.md"
keywords = ["smtp", "daemon", "quota", "limit", "postfix"]
categories = ["email"]
license = "BSD-3-Clause"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["env"] }
dsn = "1"
futures = "0.3"
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
secrecy = "0.10.3"
sqlx = { version = "0.8", features = ["any", "mysql", "postgres", "runtime-tokio", "sqlite", "tls-rustls"] }
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.30.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[build-dependencies]
built = { version = "0.7", features = ["git2"] }
