[package]
name = "policyd-rate-limit"
version = "1.0.2"
authors = ["Nicolas Embriz <nbari@tequila.io>"]
description = "Postfix rate limiter SMTP policy daemon"
documentation = "https://github.com/nbari/policyd-rate-limit"
homepage = "https://github.com/nbari/policyd-rate-limit"
repository = "https://github.com/nbari/policyd-rate-limit"
readme = "README.md"
keywords = ["smtp", "daemon", "quota", "limit", "postfix"]
categories = ["email"]
license = "BSD-3-Clause"
edition = "2024"
build = "build.rs"

[lints.rust]
warnings = "deny"

[lints.clippy]
# Allow unstable/opinionated lints (lower priority so individual lints can override)
nursery = { level = "allow", priority = -1 }

# Enforce pedantic lints
pedantic = "deny"

# Core lint groups
all = "deny"
correctness = "deny"
suspicious = "deny"
perf = "deny"
complexity = "deny"

# Safety-critical lints
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
await_holding_lock = "deny"

# Performance + memory reliability
needless_borrow = "deny"
needless_collect = "deny"
large_stack_arrays = "deny"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["env"] }
futures = "0.3"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
secrecy = "0.10.3"
sqlx = { version = "0.8", features = ["any", "mysql", "postgres", "runtime-tokio", "sqlite", "tls-rustls"] }
tokio = { version = "1.44", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[package.metadata.deb]
assets = [
  ["target/release/policyd-rate-limit", "/usr/local/bin/policyd-rate-limit", "755"],
  ["contrib/systemd/policyd-rate-limit.service", "/etc/systemd/system/policyd-rate-limit.service", "644"],
  ["contrib/systemd/policyd-rate-limit.env", "/etc/policyd-rate-limit.env", "640"],
]
depends = ""
maintainer-scripts = "contrib/debian"

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[dev-dependencies]
testcontainers = "0.26"
